test-cases/negative/test_123_invalid_nested_expression.lay
# negative test: invalid nested expression structure
# expected: parser should reject this

the variable x of type Number is 5 plus plus 5


